--- a/AI-Text-Summarizer-App/public/index.html
+++ b/AI-Text-Summarizer-App/public/index.html
@@ -13,7 +13,7 @@
     <p> Simply paste your text into the text area below and click the "Submit" button. </p>
     <div class="container">
       <div class="text-box">
-        <textarea id="text_to_summarize" name="text_to_summarize" placeholder="Paste in some text to summarize. (Min length is 200 chars. Max length is 100,000 chars.)" maxlength="100000"></textarea>
+        <textarea id="text_to_summarize" name="text_to_summarize" placeholder="Paste in some text to summarize. (Min length is 200 chars. Max length is 10,000 chars.)" maxlength="100000"></textarea>
         <button id="submit-button" class="submit-button" >
           <span class="submit-button-text">Summarize</span>
         </button>
@@ -22,7 +22,7 @@
       <textarea id="summary" name="summarized_text" placeholder="Summarized text will appear here"> </textarea>
       </div>
     </div>
-    <section class="cta-section">
+    <!-- <section class="cta-section">
       <div class="cta-content">
         <div class="cta-text">
         <h2>Curious how to build this app?</h2>
@@ -31,7 +31,7 @@
         </div>
         <img src="images/learning.png"></img>
       </div>
-    </section>
+    </section> -->
     <script src="script.js"></script>
   </body>
 </html>
