--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GenAI Projects</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>
-        GenAI Projects Home Page
-    </h1>
+    <header>
+        <h1>GenAI Projects Home Page</h1>
+    </header>
+
+    <section>
+        <p>Welcome to the GenAI Projects Home Page. Explore our exciting projects below!</p>
+       
+    </section>
+
+    <footer>
+        <p>&copy; 2024 GenAI Projects. All rights reserved.</p>
+    </footer>
 </body>
 </html>
